--- a/WpfApplication2/Pages/Page_Main.xaml
+++ b/WpfApplication2/Pages/Page_Main.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Name="PageMain" x:Class="Wpf.Pages.Page_Main"
+﻿<Page x:Name="MainPage" x:Class="Wpf.Pages.Page_Main"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,6 +8,6 @@
 	Title="Page_Main">
 
     <Grid x:Name="Grid_Page_Main">
-        <DataGrid x:Name="DataGrid_Main" Margin="0"/>
+        <DataGrid x:Name="DataGrid_Main" Margin="0" CellEditEnding="DataGrid_Main_CellEditEnding"/>
     </Grid>
 </Page>
