--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -7,15 +7,19 @@
             <MenuItem Header="文件" Height="25"/>
         </Menu>
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom"/>
-        <TabControl Margin="0,65,0,25">
+        <TabControl Margin="0,59,0,25">
             <TabItem Header="主页">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="DataGrid_Main" Margin="0" Loaded="DataGrid_Main_Loaded" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit"/>
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Left" Margin="411,15,0,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click"/>
-        <DatePicker HorizontalAlignment="Left" Margin="279,28,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click"/>
+        <DatePicker HorizontalAlignment="Left" Margin="27,30,0,0" VerticalAlignment="Top" Text="ads" Width="100" OpacityMask="White"/>
+        <DatePicker HorizontalAlignment="Left" Margin="149,30,0,0" VerticalAlignment="Top" DisplayDate="2014-02-10" Width="100"/>
+        <Button Content="查询" HorizontalAlignment="Left" Margin="254,30,0,0" VerticalAlignment="Top" Width="40" Height="24"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,34,0,0" TextWrapping="Wrap" Text="从" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="132,34,0,0" TextWrapping="Wrap" Text="到" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
