日期查询成功。

--- a/WpfApplication3/App.xaml
+++ b/WpfApplication3/App.xaml
@@ -5,6 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ResourceDictionarys\DataGrid.xaml" />
                 <ResourceDictionary Source="ResourceDictionarys\DatePicker.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
