--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -15,9 +15,9 @@
             </TabItem>
         </TabControl>
         <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click"/>
-        <DatePicker HorizontalAlignment="Left" Margin="27,30,0,0" VerticalAlignment="Top" Text="ads" Width="100" OpacityMask="White"/>
-        <DatePicker HorizontalAlignment="Left" Margin="149,30,0,0" VerticalAlignment="Top" DisplayDate="2014-02-10" Width="100"/>
-        <Button Content="查询" HorizontalAlignment="Left" Margin="254,30,0,0" VerticalAlignment="Top" Width="40" Height="24"/>
+        <DatePicker x:Name="DatePicker_First" HorizontalAlignment="Left" Margin="27,30,0,0" VerticalAlignment="Top" Text="ads" Width="100" OpacityMask="White"/>
+        <DatePicker x:Name="DatePicker_End" HorizontalAlignment="Left" Margin="149,30,0,0" VerticalAlignment="Top" DisplayDate="2014-02-10" Width="100"/>
+        <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="254,30,0,0" VerticalAlignment="Top" Width="40" Height="24" Click="Button_Search_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,34,0,0" TextWrapping="Wrap" Text="从" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="132,34,0,0" TextWrapping="Wrap" Text="到" VerticalAlignment="Top"/>
 
