--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -20,6 +20,6 @@
         <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="343,30,0,0" VerticalAlignment="Top" Width="40" Height="20" Click="Button_Search_Click" OpacityMask="White"/>
         <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="193,30,0,0" VerticalAlignment="Top" Width="80" Height="20" IsEditable="True" OpacityMask="White" ToolTip="年份，支持手动输入"/>
         <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="278,30,0,0" VerticalAlignment="Top" Width="60" Height="20" IsReadOnly="True" OpacityMask="White" ToolTip="月份"/>
-        <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="130" Height="20" SelectionChanged="ComboBox_Type_SelectionChanged"/>
+        <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="130" Height="20" SelectionChanged="ComboBox_Type_SelectionChanged" OpacityMask="White"/>
     </Grid>
 </Window>
