--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -5,7 +5,8 @@
     <Grid>
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="White">
             <MenuItem Header="文件" Height="25">
-                <MenuItem Header="退出"/>
+                <MenuItem x:Name="MenuItem_设置" Header="设置" Click="MenuItem_设置_Click"/>
+                <MenuItem x:Name="MenuItem_退出" Header="退出" Click="MenuItem_退出_Click"/>
             </MenuItem>
         </Menu>
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom"/>
@@ -17,9 +18,11 @@
             </TabItem>
         </TabControl>
         <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click"/>
-        <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="343,30,0,0" VerticalAlignment="Top" Width="40" Height="20" Click="Button_Search_Click" OpacityMask="White"/>
         <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="193,30,0,0" VerticalAlignment="Top" Width="80" Height="20" IsEditable="True" OpacityMask="White" ToolTip="年份，支持手动输入" SelectionChanged="ComboBox_Year_SelectionChanged"/>
         <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="278,30,0,0" VerticalAlignment="Top" Width="60" Height="20" IsReadOnly="True" OpacityMask="White" ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged"/>
         <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="130" Height="20" SelectionChanged="ComboBox_Type_SelectionChanged" OpacityMask="White"/>
+        <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="343,30,0,0" VerticalAlignment="Top" Width="75" Height="20" OpacityMask="White" Click="Button_Search_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="157,30,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14"/>
+        <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="464,30,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Button_刷新_Click"/>
     </Grid>
 </Window>
