更改软件名

--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
+        Title="金字塔财务管理工具" Height="600" Width="800" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
     <Grid>
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="White">
             <MenuItem Header="文件" Height="25">
