--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -10,20 +10,20 @@
             </MenuItem>
         </Menu>
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom"/>
-        <TabControl Margin="0,60,0,25">
+        <TabControl Margin="0,60,100,25">
             <TabItem Header="主页">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="DataGrid_Main" Margin="0" Loaded="DataGrid_Main_Loaded" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit" OpacityMask="White" FontSize="14" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle_Main}"/>
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click"/>
+        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,113,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click" Height="25" FontSize="14"/>
         <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="210,30,0,0" VerticalAlignment="Top" Width="80" Height="25" IsEditable="True" OpacityMask="White" ToolTip="年份，支持手动输入" SelectionChanged="ComboBox_Year_SelectionChanged" FontSize="14"/>
         <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="295,30,0,0" VerticalAlignment="Top" Width="60" Height="25" IsReadOnly="True" OpacityMask="White" ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontSize="14"/>
         <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="142" Height="25" SelectionChanged="ComboBox_Type_SelectionChanged" OpacityMask="White" FontSize="14"/>
         <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="360,30,0,0" VerticalAlignment="Top" Width="75" Height="25" OpacityMask="White" Click="Button_Search_Click" FontSize="14"/>
         <TextBlock HorizontalAlignment="Left" Margin="174,34,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14"/>
         <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="464,30,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14"/>
-        <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Left" Margin="707,42,0,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14"/>
+        <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,83,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click"/>
     </Grid>
 </Window>
