--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -25,5 +25,6 @@
         <TextBlock HorizontalAlignment="Left" Margin="174,34,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14"/>
         <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="464,30,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14"/>
         <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,83,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click"/>
+        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,497,10,0" VerticalAlignment="Top" Width="75" Height="31" Click="Button_导入Excel_Click"/>
     </Grid>
 </Window>
