--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -23,8 +23,11 @@
         <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="142" Height="25" SelectionChanged="ComboBox_Type_SelectionChanged" OpacityMask="White" FontSize="14"/>
         <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="360,30,0,0" VerticalAlignment="Top" Width="75" Height="25" OpacityMask="White" Click="Button_Search_Click" FontSize="14"/>
         <TextBlock HorizontalAlignment="Left" Margin="174,34,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14"/>
-        <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="464,30,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14"/>
+        <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="360,57,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14" Visibility="Collapsed"/>
         <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,83,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click"/>
         <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,497,10,0" VerticalAlignment="Top" Width="75" Height="31" Click="Button_导入Excel_Click"/>
+        <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Height="25" Margin="0,60,145,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,60,270,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top" Height="25" FontSize="14" RenderTransformOrigin="1.37,0.44"/>
+        <Button x:Name="Button_修改结余" Content="修改" HorizontalAlignment="Right" Margin="0,60,100,0" VerticalAlignment="Top" Height="25" Width="40" Click="Button_修改结余_Click"/>
     </Grid>
 </Window>
