遮盖grid背景改为白色

--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -53,7 +53,7 @@
                 </Grid>
             </Border>
         </Popup>
-        <Grid x:Name="Grid_遮盖" Margin="0,25,0,0" Background="#FFF7F05A" Visibility="Collapsed">
+        <Grid x:Name="Grid_遮盖" Margin="0,25,0,0" Background="White" Visibility="Collapsed" OpacityMask="White">
             <Image HorizontalAlignment="Right" Height="194" Margin="0,0,62,68" VerticalAlignment="Bottom" Width="538" Source="Image/Pyramid_Logo_V1_c_140204.png"/>
         </Grid>
     </Grid>
