--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -18,8 +18,8 @@
                     <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}" ElementStyle="{DynamicResource TextBlockStyle_居中对齐}"/>
                     <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}" ElementStyle="{DynamicResource TextBlockStyle_居中对齐}"/>
                     <DataGridTextColumn Header="日" Binding="{Binding 日}" ElementStyle="{DynamicResource TextBlockStyle_居中对齐}"/>
-                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}"/>
-                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}"/>
+                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" ElementStyle="{DynamicResource TextBlockStyle_左对齐}"/>
+                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" ElementStyle="{DynamicResource TextBlockStyle_左对齐}"/>
                     <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_金额右对齐}"/>
                     <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_金额右对齐}"/>
                     <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_金额右对齐}"/>
