--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Class="Wpf.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="金字塔财务管理工具" Height="600" Width="800" WindowStartupLocation="CenterScreen" Closed="Window_Closed" FontFamily="SimSun" FontSize="16">
+        Title="金字塔财务管理工具" Height="600" Width="1000" WindowStartupLocation="CenterScreen" Closed="Window_Closed" FontFamily="SimSun" FontSize="16">
     <Grid >
         <!-- 菜单栏 -->
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="{x:Null}" >
@@ -22,9 +22,9 @@
                     <DataGridTextColumn Header="日" Binding="{Binding 日}"/>
                     <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}"/>
                     <DataGridTextColumn Header="用途" Binding="{Binding 用途}"/>
-                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}"/>
-                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}"/>
-                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
+                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
+                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
